--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         {{>header}}
+        <p>This site was created by Salama Balah, it uses both geolocation and weather API!</p>
         <img class="aboutimg" src="./img/1.jpg">
     </div>
 
