added some informations to the forecast data

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         {{>header}}
-        <p>Enter location name or ZIP code to get current forecast</p>
+        <p>Enter location name below to get current forecast</p>
         <form >
             <input type="text" placeholder="location">
             <button>Search</button>
